Fixed navigation bar spacing and animation

--- a/src/components/home/NavigationBar/NavigationBar.module.css
+++ b/src/components/home/NavigationBar/NavigationBar.module.css
@@ -4,29 +4,39 @@
 }
 
 .nav_bar ul {
-    padding: 0;
+    margin: 0;
     list-style: none;
 }
 
 .nav_bar li {
+    padding: 0;
     display: inline;
-    margin: 0 20px;
+    margin: 0;
+
 }
 
-.nav_bar button {
+.nav_bar a {
+    display: inline-block;
     font-size: 24px;
-    background: transparent;
-    box-shadow: 0px 0px 0px transparent;
-    border: 0px solid transparent;
-    text-shadow: 0px 0px 0px transparent;
+    text-decoration: none;
+    text-align: center;
+    width: 200px;
+    height: 40px;
+
+    background: white;
+    color: black;
+    transition: all 0.5s ease-in;
 }
 
-.nav_bar button:hover {
-    background-color: #3e8e41;
+.nav_bar a:hover {
+    background-color: black;
     color: white;
+
+    transition: all 0.5s ease-in;
 }
 
 .table {
     display: table;
     margin: 0 auto;
+    padding: 0;
 }
